@@ -5,52 +5,66 @@ Configuring OS X for cross-compiling multi-threaded 32-bit and
 		 64-bit Windows programs with mingw.
 ****************************************************************
 
-This script will configure your OS X system to compile with
-mingw32 and 64.  It requires:
+This script will configure your OS X system to cross compile with
+the Mingw-w64 compilers. It requires:
 
 1. OS X up and running.
 
 2. This script. Put it in your home directory.
 
-3. Root access. This script must be run as root. You can do that 
-   by typing:
-          sudo sh CONFIGURE_CROSS.sh
+3. You will be prompted for your password during the process.
 
 press any key to continue...
 EOF
 read
 
-if [ $USER != "root" ]; then
-  echo ERROR: You must run this script as root.
-  exit 1
-fi
+#if [ $USER != "root" ]; then
+#  echo ERROR: You must run this script as root.
+#  exit 1
+#fi
 
 if [ ! `uname` == 'Darwin' ]; then
   echo ERROR: This script is intended for OS X systems.
-  echo Once you go Mac, you never go back.
+  echo Once you go Mac, you never go back...
   exit 1
 fi
 
-echo Attempting to install tools necessary to build md5deep...
-echo Installing wget...
-yum -y install wget
-echo Successfully installed wget.
-
-echo Installing Fedora Win32 and Win64 cross compiler packages...
+echo Ready to install.
+echo
+echo Installing Mingw-w64 cross compiler packages...
 echo For information, please see:
-echo http://fedoraproject.org/wiki/MinGW/CrossCompilerFramework
-if [ ! -d /etc/yum.repos.d ]; then
-  echo ERROR: /etc/yum.repos.d does not exist. This is very bad. I quit.
-  exit 1
+echo http://mingw-w64.sourceforge.net/download.php#automated-builds
+echo
+I686_DATE=20130531
+I686_FILENAME=mingw-w32-bin_i686-darwin_$I686_DATE.tar.bz2
+if [ ! -r $I686_FILENAME ]; then
+    echo Downloading 32-bit cross compiler
+    curl -L "http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win32/Automated%20Builds/mingw-w32-bin_i686-darwin_$I686_DATE.tar.bz2/download" > $I686_FILENAME
 fi
-if [ ! -r /etc/yum.repos.d/fedora-cross.repo ] ; then
-  if wget --directory-prefix=/etc/yum.repos.d  http://build1.openftd.org/fedora-cross/fedora-cross.repo ; then
-    echo Successfully downloaded repository list for cross compilers.
-  else
-    echo ERROR: Could not download the repository list cross compilers.
-    exit 1
-  fi
+
+X64_DATE=20130615
+X64_FILENAME=mingw-w64-bin_i686-darwin_$X64_DATE.tar.bz2
+if [ ! -r $X64_FILENAME ]; then
+    echo Downloading 64-bit cross compiler
+    curl -L "http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Automated%20Builds/mingw-w64-bin_i686-darwin_$X64_DATE.tar.bz2/download" > $X64_FILENAME
 fi
+
+echo
+echo Expanding files
+echo
+rm -rf i686-w64-mingw32 x86_64-w64-mingw32
+mkdir i686-w64-mingw32 x86_64-w64-mingw32
+cd i686-w64-mingw32
+tar jxf ../$I686_FILENAME
+cd ../x86_64-w64-mingw32
+tar jxf ../$X64_FILENAME
+cd ..
+
+echo
+echo Moving files into position. Please enter your password at the prompt:
+echo
+sudo mkdir -p /usr/local
+sudo mv i686-w64-mingw32 x86_64-w64-mingw32 /usr/local
 
 echo
 echo Getting pthreads...
@@ -58,24 +72,24 @@ echo
 if [ ! -r pthreads-w32-2-9-1-release.tar.gz ]; then
   wget ftp://sourceware.org/pub/pthreads-win32/pthreads-w32-2-9-1-release.tar.gz
 fi
-/bin/rm -rf pthreads-w32-2-9-1-release 
+/bin/rm -rf pthreads-w32-2-9-1-release
 tar xfz pthreads-w32-2-9-1-release.tar.gz
 
 echo
 echo Compiling pthreads...
 echo
 pushd pthreads-w32-2-9-1-release
-  for CROSS in i686-w64-mingw32 x86_64-w64-mingw32 
+  for CROSS in i686-w64-mingw32 x86_64-w64-mingw32
   do
-    make CROSS=$CROSS- CFLAGS="-DHAVE_STRUCT_TIMESPEC -I." clean GC-static
-    install implement.h need_errno.h pthread.h sched.h semaphore.h /usr/$CROSS/sys-root/mingw/include/
+    PATH=/usr/local/$CROSS/bin:$PATH make CROSS=$CROSS- CFLAGS="-DHAVE_STRUCT_TIMESPEC -I." clean GC-static
+    sudo install implement.h need_errno.h pthread.h sched.h semaphore.h /usr/local/$CROSS/mingw/include/
     if [ $? != 0 ]; then
-      echo "Unable to install include files for $CROSS"
+      echo "Unable to install pthreads header for $CROSS"
       exit 1
     fi
-    install *.a /usr/$CROSS/sys-root/mingw/lib/
+    sudo install *.a /usr/local/$CROSS/mingw/lib/
     if [ $? != 0 ]; then
-      echo "Unable to install library for $CROSS"
+      echo "Unable to install pthreads library for $CROSS"
       exit 1
     fi
     make clean
@@ -83,6 +97,11 @@ pushd pthreads-w32-2-9-1-release
 popd
 echo
 echo Successfully installed pthreads.
+
+
+## RBF - Add new compilers to $PATH in .profile
+## RBF - Do we need to update/remove the compiler flags for cross compilation?
+
 
 echo ================================================================
 echo ================================================================
